BUG: fixed blue square appearing on mobile buttons click

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 }
 
 * {
+    -webkit-tap-highlight-color: transparent; /* remove blue outline on mobile click*/
     margin: 0;
     padding: 0;
     box-sizing: border-box;
